Done desktop layour and structure

--- a/index.html
+++ b/index.html
@@ -14,29 +14,42 @@
 </head>
 
 <body>
-  <div id="main_container">
-    <section>
+  <main>
 
-      <div class="card_container">
+    <div class="card_container">
+
+      <!-- Card Front image -->
+      <div class="front_card_container">
+        <img class="card_front" src="images/bg-card-front.png" alt="Debit card">
+        <img class="card_logo" src="images\card-logo.svg" alt="Card logo">
       </div>
 
 
-      <div class="form-container">
+      <!-- Card Back Image -->
+      <div class="card_back_container">
+        <img src="images/bg-card-back.png" alt="Debit card">
       </div>
+    </div>
 
-    </section>
 
-  </div>
+    <div class="form_container">
+
+
+    </div>
+
+
+  </main>
 </body>
 
 </html>
+
+<!-- <footer class="attribution">
+  Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="-blank">Frontend Mentor</a>.
+  Coded by <a href="#">Sador Zerezghi</a>.
+</footer> -->
+
 <!-- Completed state start -->
 
 <!-- Thank you!
 We've added your card details
 Continue -->
-
-<!-- <div class="attribution">
-  Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-  Coded by <a href="#">Sador Zerezghi</a>.
-</div> -->
